# pyproject-validator

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGES.rst  CONTRIBUTING.rst  LICENSE  Pipfile  README.rst  check_python_versions.py  pyproject.toml
newsfragments/: +53ffe4aa.feature.rst  +e6304783.feature.rst
tests/: __init__.py  pyproject.py  test_check_python_versions.py  test_main_check_python_versions.py
