[project]
name = "pyproject-validator"
version = "0.0.0"
description = "Process executor (not only) for tests."
readme = "README.rst"
keywords = ["pre-commit", "pyproject"]
license = "MIT License"
license-files = ["LICENSE"]
authors = [
    {name = "Grzegorz Śliwiński", email = "fizyk+pypi@fizyk.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "packaging>=20.0",
    "tomli>=1.0.0; python_version < '3.11'"
]
requires-python = ">= 3.10"

[project.urls]
"Source" = "https://github.com/fizyk/pyproject-validator"
"Bug Tracker" = "https://github.com/fizyk/pyproject-validator/issues"
"Changelog" = "https://github.com/fizyk/pyproject-validator/blob/v0.0.0/CHANGES.rst"

[tool.towncrier]
directory = "newsfragments"
single_file=true
filename="CHANGES.rst"
issue_format="`#{issue} <https://github.com/dbfixtures/mirakuru/issues/{issue}>`_"

[[tool.towncrier.type]]
directory = "break"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "depr"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneus"
showcontent = false

[tool.pytest.ini_options]
filterwarnings = "error"
xfail_strict = "True"

[tool.ruff]
line-length = 120
target-version = 'py310'

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
]

[tool.mypy]
allow_redefinition = "False"
allow_untyped_globals = "False"
check_untyped_defs = "True"
disallow_incomplete_defs = "True"
disallow_subclassing_any = "True"
disallow_untyped_calls = "True"
disallow_untyped_decorators = "True"
disallow_untyped_defs = "True"
follow_imports = "silent"
ignore_missing_imports = "False"
implicit_reexport = "False"
no_implicit_optional = "True"
pretty = "True"
show_error_codes = "True"
strict_equality = "True"
warn_no_return = "True"
warn_return_any = "True"
warn_unreachable = "True"
warn_unused_ignores = "True"

[[tool.mypy.overrides]]
module = ["tomli"]
ignore_missing_imports = "True"

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
# github_url = "https://github.com/<user or organization>/<project>/"

[tool.tbump.version]
current = "0.0.0"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\-
    (?P<extra>.+)
  )?
  '''

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.field]]
# the name of the field
name = "extra"
# the default value to use, if there is no match
default = ""


# For each file to patch, add a [[file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = '"Changelog" = "https://github.com/fizyk/pyproject-validator/blob/v{current_version}/CHANGES.rst"'

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made

[[tool.tbump.before_commit]]
name = "Build changelog"
cmd = "pipenv run towncrier build --version {new_version} --yes"

# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
#  name = "publish"
#  cmd = "./publish.sh"
